--- a/manifest.plist
+++ b/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/Roffa/rchain/blob/master/micang_1.0.0.ipa</string>
+					<string>https://github.com/Roffa/rchain/raw/master/micang_1.0.0.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://github.com/Roffa/rchain/blob/master/57.png</string>
+					<string>https://shrchain.oss-cn-shanghai.aliyuncs.com/img/57.jpg</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://github.com/Roffa/rchain/raw/master/512.png</string>
+					<string>https://shrchain.oss-cn-shanghai.aliyuncs.com/img/512.jpg</string>
 				</dict>
 			</array>
 			<key>metadata</key>
